--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,8 +3,8 @@ asynch==0.2.3; python_version >= '3.7' and python_version < '4.0'
 authlib==1.2.1
 bitarray==2.9.2
 blinker==1.8.1; python_version >= '3.8'
-boto3==1.34.94; python_version >= '3.8'
-botocore==1.34.94; python_version >= '3.8'
+boto3==1.34.98; python_version >= '3.8'
+botocore==1.34.98; python_version >= '3.8'
 cachelib==0.9.0; python_version >= '3.7'
 cachetools==5.3.3; python_version >= '3.7'
 certifi==2024.2.2; python_version >= '3.6'
@@ -17,7 +17,7 @@ clickhouse-sqlalchemy==0.2.4; python_version >= '3.7' and python_version < '4'
 cmdstanpy==1.2.2; python_version >= '3.8'
 contourpy==1.2.1; python_version >= '3.9'
 convertdate==2.4.0; python_version >= '3.7' and python_version < '4'
-cryptography==42.0.5; python_version >= '3.7'
+cryptography==42.0.6; python_version >= '3.7'
 cx-oracle==8.3.0
 cycler==0.12.1; python_version >= '3.8'
 ephem==4.1.5
@@ -97,7 +97,7 @@ stanio==0.5.0; python_version >= '3.8'
 tenacity==8.2.3; python_version >= '3.7'
 thrift==0.16.0; python_version >= '3.0'
 thrift-sasl==0.4.3
-tqdm==4.66.2; python_version >= '3.7'
+tqdm==4.66.4; python_version >= '3.7'
 trino[sqlalchemy]==0.328.0; python_version >= '3.8'
 tzdata==2024.1; python_version >= '2'
 tzlocal==5.2; python_version >= '3.8'
@@ -112,11 +112,10 @@ amqp==5.2.0; python_version >= '3.6'
 apache-superset==4.0.0; python_version ~= '3.9'
 apispec[yaml]==6.6.1; python_version >= '3.8'
 apsw==3.45.3.0; python_version >= '3.8'
-async-timeout==4.0.3; python_full_version <= '3.11.2'
 attrs==23.2.0; python_version >= '3.7'
 babel==2.14.0; python_version >= '3.7'
 backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
-bcrypt==4.1.2; python_version >= '3.7'
+bcrypt==4.1.3; python_version >= '3.7'
 billiard==4.2.0; python_version >= '3.7'
 bottleneck==1.3.8
 brotli==1.1.0; platform_python_implementation != 'PyPy'
@@ -133,10 +132,9 @@ deprecated==1.2.14; python_version >= '2.7' and python_version not in '3.0, 3.1,
 deprecation==2.1.0
 dnspython==2.6.1; python_version >= '3.8'
 email-validator==2.1.1; python_version >= '3.8'
-exceptiongroup==1.2.1; python_version < '3.11'
 flask-appbuilder==4.4.1; python_version ~= '3.7'
 flask-babel==2.0.0
-flask-caching==2.2.0; python_version >= '3.8'
+flask-caching==2.3.0; python_version >= '3.8'
 flask-compress==1.15
 flask-jwt-extended==4.6.0; python_version >= '3.7' and python_version < '4'
 flask-limiter==3.6.0; python_version >= '3.8'
@@ -149,14 +147,14 @@ flask-wtf==1.2.1; python_version >= '3.8'
 func-timeout==4.3.5
 geographiclib==2.0; python_version >= '3.7'
 geopy==2.4.1; python_version >= '3.7'
-gunicorn==21.2.0; python_version >= '3.5'
+gunicorn==21.2.0; sys_platform != 'win32'
 h11==0.14.0; python_version >= '3.7'
 hashids==1.3.1; python_version >= '2.7'
 humanize==4.9.0; python_version >= '3.8'
 importlib-metadata==7.1.0; python_version >= '3.8'
 importlib-resources==6.4.0; python_version >= '3.8'
 isodate==0.6.1
-jsonschema==4.21.1; python_version >= '3.8'
+jsonschema==4.22.0; python_version >= '3.8'
 jsonschema-specifications==2023.12.1; python_version >= '3.8'
 kombu==5.3.7; python_version >= '3.8'
 korean-lunar-calendar==0.3.1
@@ -165,7 +163,7 @@ llvmlite==0.42.0; python_version >= '3.9'
 mako==1.3.3; python_version >= '3.8'
 markdown==3.6; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
-marshmallow==3.21.1; python_version >= '3.8'
+marshmallow==3.21.2; python_version >= '3.8'
 marshmallow-sqlalchemy==0.28.2; python_version >= '3.7'
 mdurl==0.1.2; python_version >= '3.7'
 msgpack==1.0.8; python_version >= '3.8'
@@ -183,7 +181,7 @@ polyline==2.0.2; python_version >= '3.7'
 prison==0.2.1
 prompt-toolkit==3.0.43; python_full_version >= '3.7.0'
 pyarrow==14.0.2; python_version >= '3.8'
-pygments==2.17.2; python_version >= '3.7'
+pygments==2.18.0; python_version >= '3.8'
 pyjwt==2.8.0; python_version >= '3.7'
 pynacl==1.5.0; python_version >= '3.6'
 pyopenssl==24.1.0
@@ -192,7 +190,7 @@ python-dotenv==1.0.1; python_version >= '3.8'
 python-geohash==0.8.5
 pyyaml==6.0.1; python_version >= '3.6'
 redis==4.6.0; python_version >= '3.7'
-referencing==0.35.0; python_version >= '3.8'
+referencing==0.35.1; python_version >= '3.8'
 requests-cache==1.2.0; python_version >= '3.8'
 rich==13.7.1; python_full_version >= '3.7.0'
 rpds-py==0.18.0; python_version >= '3.8'
@@ -204,7 +202,7 @@ slack-sdk==3.27.1; python_version >= '3.6'
 sniffio==1.3.1; python_version >= '3.7'
 sortedcontainers==2.4.0
 sqlalchemy-utils==0.38.3; python_version ~= '3.6'
-sqlglot==23.12.2; python_version >= '3.7'
+sqlglot==23.13.1; python_version >= '3.7'
 sqlparse==0.4.4; python_version >= '3.5'
 sshtunnel==0.4.0
 tabulate==0.8.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
