--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,10 @@ amqp==5.2.0; python_version >= '3.6'
 apache-superset==4.0.0; python_version ~= '3.9'
 apispec[yaml]==6.6.1; python_version >= '3.8'
 apsw==3.45.3.0; python_version >= '3.8'
-async-timeout==4.0.3; python_full_version <= '3.11.2'
 attrs==23.2.0; python_version >= '3.7'
 babel==2.14.0; python_version >= '3.7'
 backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
-bcrypt==4.1.2; python_version >= '3.7'
+bcrypt==4.1.3; python_version >= '3.7'
 billiard==4.2.0; python_version >= '3.7'
 blinker==1.8.1; python_version >= '3.8'
 bottleneck==1.3.8
@@ -28,16 +27,15 @@ click-repl==0.3.0; python_version >= '3.6'
 colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
 cron-descriptor==1.4.3
 croniter==2.0.5; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-cryptography==42.0.5; python_version >= '3.7'
+cryptography==42.0.6; python_version >= '3.7'
 deprecated==1.2.14; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecation==2.1.0
 dnspython==2.6.1; python_version >= '3.8'
 email-validator==2.1.1; python_version >= '3.8'
-exceptiongroup==1.2.1; python_version < '3.11'
 flask==2.3.3; python_version >= '3.8'
 flask-appbuilder==4.4.1; python_version ~= '3.7'
 flask-babel==2.0.0
-flask-caching==2.2.0; python_version >= '3.8'
+flask-caching==2.3.0; python_version >= '3.8'
 flask-compress==1.15
 flask-jwt-extended==4.6.0; python_version >= '3.7' and python_version < '4'
 flask-limiter==3.6.0; python_version >= '3.8'
@@ -52,7 +50,7 @@ geographiclib==2.0; python_version >= '3.7'
 geopy==2.4.1; python_version >= '3.7'
 google-auth==2.29.0
 greenlet==3.0.3; python_version >= '3.7'
-gunicorn==21.2.0; python_version >= '3.5'
+gunicorn==21.2.0; sys_platform != 'win32'
 h11==0.14.0; python_version >= '3.7'
 hashids==1.3.1; python_version >= '2.7'
 holidays==0.25; python_version >= '3.7'
@@ -63,7 +61,7 @@ importlib-resources==6.4.0; python_version >= '3.8'
 isodate==0.6.1
 itsdangerous==2.2.0; python_version >= '3.8'
 jinja2==3.1.3; python_version >= '3.7'
-jsonschema==4.21.1; python_version >= '3.8'
+jsonschema==4.22.0; python_version >= '3.8'
 jsonschema-specifications==2023.12.1; python_version >= '3.8'
 kombu==5.3.7; python_version >= '3.8'
 korean-lunar-calendar==0.3.1
@@ -73,7 +71,7 @@ mako==1.3.3; python_version >= '3.8'
 markdown==3.6; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
 markupsafe==2.1.5; python_version >= '3.7'
-marshmallow==3.21.1; python_version >= '3.8'
+marshmallow==3.21.2; python_version >= '3.8'
 marshmallow-sqlalchemy==0.28.2; python_version >= '3.7'
 mdurl==0.1.2; python_version >= '3.7'
 msgpack==1.0.8; python_version >= '3.8'
@@ -97,7 +95,7 @@ pyarrow==14.0.2; python_version >= '3.8'
 pyasn1==0.6.0; python_version >= '3.8'
 pyasn1-modules==0.4.0; python_version >= '3.8'
 pycparser==2.22; python_version >= '3.8'
-pygments==2.17.2; python_version >= '3.7'
+pygments==2.18.0; python_version >= '3.8'
 pyjwt==2.8.0; python_version >= '3.7'
 pynacl==1.5.0; python_version >= '3.6'
 pyopenssl==24.1.0
@@ -109,7 +107,7 @@ python-geohash==0.8.5
 pytz==2024.1
 pyyaml==6.0.1; python_version >= '3.6'
 redis==4.6.0; python_version >= '3.7'
-referencing==0.35.0; python_version >= '3.8'
+referencing==0.35.1; python_version >= '3.8'
 requests==2.31.0; python_version >= '3.7'
 requests-cache==1.2.0; python_version >= '3.8'
 rich==13.7.1; python_full_version >= '3.7.0'
@@ -125,7 +123,7 @@ sniffio==1.3.1; python_version >= '3.7'
 sortedcontainers==2.4.0
 sqlalchemy==1.4.52; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 sqlalchemy-utils==0.38.3; python_version ~= '3.6'
-sqlglot==23.12.2; python_version >= '3.7'
+sqlglot==23.13.1; python_version >= '3.7'
 sqlparse==0.4.4; python_version >= '3.5'
 sshtunnel==0.4.0
 tabulate==0.8.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
