--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,21 +3,21 @@ asynch==0.2.3; python_version >= '3.7' and python_version < '4.0'
 authlib==1.2.1
 bitarray==2.9.2
 blinker==1.8.2; python_version >= '3.8'
-boto3==1.34.104; python_version >= '3.8'
-botocore==1.34.104; python_version >= '3.8'
+boto3==1.34.136; python_version >= '3.8'
+botocore==1.34.136; python_version >= '3.8'
 cachelib==0.9.0; python_version >= '3.7'
 cachetools==5.3.3; python_version >= '3.7'
-certifi==2024.2.2; python_version >= '3.6'
+certifi==2024.6.2; python_version >= '3.6'
 cffi==1.16.0; platform_python_implementation != 'PyPy'
 charset-normalizer==3.3.2; python_full_version >= '3.7.0'
 ciso8601==2.3.1
 click==8.1.7; python_version >= '3.7'
-clickhouse-driver==0.2.7; python_version >= '3.7' and python_version < '4'
+clickhouse-driver==0.2.8; python_version >= '3.7' and python_version < '4'
 clickhouse-sqlalchemy==0.2.4; python_version >= '3.7' and python_version < '4'
-cmdstanpy==1.2.2; python_version >= '3.8'
+cmdstanpy==1.2.4; python_version >= '3.8'
 contourpy==1.2.1; python_version >= '3.9'
 convertdate==2.4.0; python_version >= '3.7' and python_version < '4'
-cryptography==42.0.7; python_version >= '3.7'
+cryptography==42.0.8; python_version >= '3.7'
 cx-oracle==8.3.0
 cycler==0.12.1; python_version >= '3.8'
 ephem==4.1.5
@@ -27,20 +27,20 @@ flask-cors==4.0.0
 flask-mail==0.9.1
 flask-oauth==0.12
 flask-oauthlib==0.9.6
-fonttools==4.51.0; python_version >= '3.8'
-fsspec==2024.3.1; python_version >= '3.8'
+fonttools==4.53.0; python_version >= '3.8'
+fsspec==2024.6.1; python_version >= '3.8'
 future==1.0.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 gevent==23.9.1; python_version >= '3.8'
-google-api-core[grpc]==2.19.0; python_version >= '3.7'
-google-auth==2.29.0
-google-cloud-bigquery==3.22.0; python_version >= '3.7'
+google-api-core[grpc]==2.19.1; python_version >= '3.7'
+google-auth==2.30.0
+google-cloud-bigquery==3.25.0; python_version >= '3.7'
 google-cloud-core==2.4.1; python_version >= '3.7'
 google-crc32c==1.5.0; python_version >= '3.7'
-google-resumable-media==2.7.0; python_version >= '3.7'
-googleapis-common-protos==1.63.0; python_version >= '3.7'
+google-resumable-media==2.7.1; python_version >= '3.7'
+googleapis-common-protos==1.63.2; python_version >= '3.7'
 greenlet==3.0.3; python_version >= '3.7'
-grpcio==1.63.0
-grpcio-status==1.62.2
+grpcio==1.64.1
+grpcio-status==1.64.1
 holidays==0.25; python_version >= '3.7'
 httplib2==0.22.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 idna==3.7; python_version >= '3.5'
@@ -51,22 +51,22 @@ itsdangerous==2.2.0; python_version >= '3.8'
 jinja2==3.1.4; python_version >= '3.7'
 jmespath==1.0.1; python_version >= '3.7'
 kiwisolver==1.4.5; python_version >= '3.7'
-leb128==1.0.7
+leb128==1.0.8
 lunarcalendar==0.0.9; python_version >= '2.7' and python_version < '4'
 lz4==4.3.3; python_version >= '3.8'
 markupsafe==2.1.5; python_version >= '3.7'
-matplotlib==3.8.4; python_version >= '3.9'
+matplotlib==3.9.0; python_version >= '3.9'
 mysqlclient==2.2.0; python_version >= '3.8'
 numpy==1.23.5; python_version >= '3.8'
 oauth2==1.9.0.post1
 oauthlib==2.1.0
 openpyxl==3.1.2; python_version >= '3.6'
-packaging==24.0; python_version >= '3.7'
+packaging==24.1; python_version >= '3.8'
 pandas[performance]==2.0.3; python_version >= '3.8'
 pillow==10.2.0; python_version >= '3.8'
 prophet==1.1.1; python_version >= '3.7'
-proto-plus==1.23.0; python_version >= '3.6'
-protobuf==4.25.3; python_version >= '3.8'
+proto-plus==1.24.0; python_version >= '3.7'
+protobuf==5.27.2; python_version >= '3.8'
 psycopg2==2.9.7; python_version >= '3.6'
 pure-sasl==0.6.2
 pyasn1==0.6.0; python_version >= '3.8'
@@ -81,12 +81,12 @@ pyparsing==3.1.2; python_full_version >= '3.6.8'
 python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-ldap==3.4.4; python_version >= '3.6'
 pytz==2024.1
-requests==2.31.0; python_version >= '3.7'
+requests==2.32.3; python_version >= '3.8'
 requests-oauthlib==1.1.0
 rsa==4.9; python_version >= '3.6' and python_version < '4'
-s3transfer==0.10.1; python_version >= '3.8'
+s3transfer==0.10.2; python_version >= '3.8'
 sasl==0.3.1
-setuptools==69.5.1; python_version >= '3.8'
+setuptools==70.1.1; python_version >= '3.8'
 setuptools-git==1.2
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlalchemy==1.4.52; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
@@ -94,7 +94,7 @@ sqlalchemy-bigquery==1.8.0; python_version < '3.12' and python_version >= '3.7'
 sqlalchemy-redshift==0.8.14; python_version >= '3.4'
 sqlalchemy-trino==0.5.0; python_version >= '3.7'
 stanio==0.5.0; python_version >= '3.8'
-tenacity==8.3.0; python_version >= '3.8'
+tenacity==8.4.2; python_version >= '3.8'
 thrift==0.16.0; python_version >= '3.0'
 thrift-sasl==0.4.3
 tqdm==4.66.4; python_version >= '3.7'
@@ -105,19 +105,19 @@ urllib3[socks]==2.0.7; python_version >= '3.7'
 werkzeug==3.0.3; python_version >= '3.8'
 wheel==0.43.0; python_version >= '3.8'
 zope.event==5.0; python_version >= '3.7'
-zope.interface==6.3; python_version >= '3.7'
+zope.interface==6.4.post2; python_version >= '3.7'
 zstd==1.5.5.1
-alembic==1.13.1; python_version >= '3.8'
+alembic==1.13.2; python_version >= '3.8'
 amqp==5.2.0; python_version >= '3.6'
 apache-superset==4.0.1; python_version ~= '3.9'
 apispec[yaml]==6.6.1; python_version >= '3.8'
-apsw==3.45.3.0; python_version >= '3.8'
+apsw==3.46.0.1; python_version >= '3.8'
 attrs==23.2.0; python_version >= '3.7'
 babel==2.15.0; python_version >= '3.8'
 backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
 bcrypt==4.1.3; python_version >= '3.7'
 billiard==4.2.0; python_version >= '3.7'
-bottleneck==1.3.8
+bottleneck==1.4.0
 brotli==1.1.0; platform_python_implementation != 'PyPy'
 cattrs==23.2.3; python_version >= '3.8'
 celery==5.4.0; python_version >= '3.8'
@@ -131,13 +131,13 @@ croniter==2.0.5; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.
 deprecated==1.2.14; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecation==2.1.0
 dnspython==2.6.1; python_version >= '3.8'
-email-validator==2.1.1; python_version >= '3.8'
-flask-appbuilder==4.4.1; python_version ~= '3.7'
+email-validator==2.2.0; python_version >= '3.8'
+flask-appbuilder==4.5.0; python_version ~= '3.7'
 flask-babel==2.0.0
 flask-caching==2.3.0; python_version >= '3.8'
 flask-compress==1.15
 flask-jwt-extended==4.6.0; python_version >= '3.7' and python_version < '4'
-flask-limiter==3.6.0; python_version >= '3.8'
+flask-limiter==3.7.0; python_version >= '3.8'
 flask-login==0.6.3; python_version >= '3.7'
 flask-migrate==3.1.0; python_version >= '3.6'
 flask-session==0.8.0; python_version >= '3.8'
@@ -151,35 +151,35 @@ gunicorn==21.2.0; sys_platform != 'win32'
 h11==0.14.0; python_version >= '3.7'
 hashids==1.3.1; python_version >= '2.7'
 humanize==4.9.0; python_version >= '3.8'
-importlib-metadata==7.1.0; python_version >= '3.8'
+importlib-metadata==8.0.0; python_version >= '3.8'
 importlib-resources==6.4.0; python_version >= '3.8'
 isodate==0.6.1
 jsonschema==4.22.0; python_version >= '3.8'
 jsonschema-specifications==2023.12.1; python_version >= '3.8'
 kombu==5.3.7; python_version >= '3.8'
 korean-lunar-calendar==0.3.1
-limits==3.12.0; python_version >= '3.8'
-llvmlite==0.42.0; python_version >= '3.9'
-mako==1.3.3; python_version >= '3.8'
+limits==3.13.0; python_version >= '3.8'
+llvmlite==0.43.0; python_version >= '3.9'
+mako==1.3.5; python_version >= '3.8'
 markdown==3.6; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
-marshmallow==3.21.2; python_version >= '3.8'
+marshmallow==3.21.3; python_version >= '3.8'
 marshmallow-sqlalchemy==0.28.2; python_version >= '3.7'
 mdurl==0.1.2; python_version >= '3.7'
 msgpack==1.0.8; python_version >= '3.8'
 msgspec==0.18.6; python_version >= '3.8'
 nh3==0.2.17
-numba==0.59.1
-numexpr==2.10.0
+numba==0.60.0
+numexpr==2.10.1
 ordered-set==4.1.0; python_version >= '3.7'
 outcome==1.3.0.post0; python_version >= '3.7'
 paramiko==3.4.0; python_version >= '3.6'
 parsedatetime==2.6
 pgsanity==0.2.9
-platformdirs==4.2.1; python_version >= '3.8'
+platformdirs==4.2.2; python_version >= '3.8'
 polyline==2.0.2; python_version >= '3.7'
 prison==0.2.1
-prompt-toolkit==3.0.43; python_full_version >= '3.7.0'
+prompt-toolkit==3.0.47; python_full_version >= '3.7.0'
 pyarrow==14.0.2; python_version >= '3.8'
 pygments==2.18.0; python_version >= '3.8'
 pyjwt==2.8.0; python_version >= '3.7'
@@ -191,24 +191,24 @@ python-geohash==0.8.5
 pyyaml==6.0.1; python_version >= '3.6'
 redis==4.6.0; python_version >= '3.7'
 referencing==0.35.1; python_version >= '3.8'
-requests-cache==1.2.0; python_version >= '3.8'
+requests-cache==1.2.1; python_version >= '3.8'
 rich==13.7.1; python_full_version >= '3.7.0'
 rpds-py==0.18.1; python_version >= '3.8'
 selenium==4.9.1; python_version >= '3.7'
 shillelagh[gsheetsapi]==1.2.19; python_version >= '3.8'
 shortid==0.1.2
 simplejson==3.19.2; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2, 3.3'
-slack-sdk==3.27.1; python_version >= '3.6'
+slack-sdk==3.30.0; python_version >= '3.6'
 sniffio==1.3.1; python_version >= '3.7'
 sortedcontainers==2.4.0
 sqlalchemy-utils==0.38.3; python_version ~= '3.6'
-sqlglot==23.15.8; python_version >= '3.7'
+sqlglot==23.17.0; python_version >= '3.7'
 sqlparse==0.4.4; python_version >= '3.5'
 sshtunnel==0.4.0
 tabulate==0.8.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-trio==0.25.0; python_version >= '3.8'
+trio==0.25.1; python_version >= '3.8'
 trio-websocket==0.11.1; python_version >= '3.7'
-typing-extensions==4.11.0; python_version >= '3.8'
+typing-extensions==4.12.2; python_version >= '3.8'
 url-normalize==1.4.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 vine==5.1.0; python_version >= '3.6'
 wcwidth==0.2.13
@@ -217,5 +217,5 @@ wsproto==1.2.0; python_full_version >= '3.7.0'
 wtforms==3.1.2; python_version >= '3.8'
 wtforms-json==0.3.5
 xlsxwriter==3.0.9; python_version >= '3.6'
-zipp==3.18.1; python_version >= '3.8'
+zipp==3.19.2; python_version >= '3.8'
 zstandard==0.22.0; platform_python_implementation != 'PyPy'
