--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,23 @@
 -i https://pypi.org/simple
 alembic==1.13.2; python_version >= '3.8'
 amqp==5.2.0; python_version >= '3.6'
-apache-superset==4.0.1; python_version ~= '3.9'
+apache-superset==4.0.2; python_version ~= '3.9'
 apispec[yaml]==6.6.1; python_version >= '3.8'
 apsw==3.46.0.1; python_version >= '3.8'
+async-timeout==4.0.3; python_full_version <= '3.11.2'
 attrs==23.2.0; python_version >= '3.7'
 babel==2.15.0; python_version >= '3.8'
 backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
-bcrypt==4.1.3; python_version >= '3.7'
+bcrypt==4.2.0; python_version >= '3.7'
 billiard==4.2.0; python_version >= '3.7'
 blinker==1.8.2; python_version >= '3.8'
 bottleneck==1.4.0
 brotli==1.1.0; platform_python_implementation != 'PyPy'
 cachelib==0.9.0; python_version >= '3.7'
-cachetools==5.3.3; python_version >= '3.7'
+cachetools==5.4.0; python_version >= '3.7'
 cattrs==23.2.3; python_version >= '3.8'
 celery==5.4.0; python_version >= '3.8'
-certifi==2024.6.2; python_version >= '3.6'
+certifi==2024.7.4; python_version >= '3.6'
 cffi==1.16.0; platform_python_implementation != 'PyPy'
 charset-normalizer==3.3.2; python_full_version >= '3.7.0'
 click==8.1.7; python_version >= '3.7'
@@ -26,19 +27,20 @@ click-plugins==1.1.1
 click-repl==0.3.0; python_version >= '3.6'
 colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
 cron-descriptor==1.4.3
-croniter==2.0.5; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+croniter==3.0.3; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 cryptography==42.0.8; python_version >= '3.7'
 deprecated==1.2.14; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecation==2.1.0
 dnspython==2.6.1; python_version >= '3.8'
 email-validator==2.2.0; python_version >= '3.8'
+exceptiongroup==1.2.2; python_version < '3.11'
 flask==2.3.3; python_version >= '3.8'
 flask-appbuilder==4.5.0; python_version ~= '3.7'
 flask-babel==2.0.0
 flask-caching==2.3.0; python_version >= '3.8'
 flask-compress==1.15
 flask-jwt-extended==4.6.0; python_version >= '3.7' and python_version < '4'
-flask-limiter==3.7.0; python_version >= '3.8'
+flask-limiter==3.8.0; python_version >= '3.8'
 flask-login==0.6.3; python_version >= '3.7'
 flask-migrate==3.1.0; python_version >= '3.6'
 flask-session==0.8.0; python_version >= '3.8'
@@ -48,20 +50,20 @@ flask-wtf==1.2.1; python_version >= '3.8'
 func-timeout==4.3.5
 geographiclib==2.0; python_version >= '3.7'
 geopy==2.4.1; python_version >= '3.7'
-google-auth==2.30.0
+google-auth==2.32.0
 greenlet==3.0.3; python_version >= '3.7'
-gunicorn==21.2.0; sys_platform != 'win32'
+gunicorn==21.2.0; python_version >= '3.5'
 h11==0.14.0; python_version >= '3.7'
 hashids==1.3.1; python_version >= '2.7'
 holidays==0.25; python_version >= '3.7'
-humanize==4.9.0; python_version >= '3.8'
+humanize==4.10.0; python_version >= '3.8'
 idna==3.7; python_version >= '3.5'
-importlib-metadata==8.0.0; python_version >= '3.8'
+importlib-metadata==8.2.0; python_version >= '3.8'
 importlib-resources==6.4.0; python_version >= '3.8'
 isodate==0.6.1
 itsdangerous==2.2.0; python_version >= '3.8'
 jinja2==3.1.4; python_version >= '3.7'
-jsonschema==4.22.0; python_version >= '3.8'
+jsonschema==4.23.0; python_version >= '3.8'
 jsonschema-specifications==2023.12.1; python_version >= '3.8'
 kombu==5.3.7; python_version >= '3.8'
 korean-lunar-calendar==0.3.1
@@ -76,7 +78,7 @@ marshmallow-sqlalchemy==0.28.2; python_version >= '3.7'
 mdurl==0.1.2; python_version >= '3.7'
 msgpack==1.0.8; python_version >= '3.8'
 msgspec==0.18.6; python_version >= '3.8'
-nh3==0.2.17
+nh3==0.2.18
 numba==0.60.0
 numexpr==2.10.1
 numpy==1.23.5; python_version >= '3.8'
@@ -98,7 +100,7 @@ pycparser==2.22; python_version >= '3.8'
 pygments==2.18.0; python_version >= '3.8'
 pyjwt==2.8.0; python_version >= '3.7'
 pynacl==1.5.0; python_version >= '3.6'
-pyopenssl==24.1.0
+pyopenssl==24.2.1
 pyparsing==3.1.2; python_full_version >= '3.6.8'
 pysocks==1.7.1
 python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
@@ -111,23 +113,23 @@ referencing==0.35.1; python_version >= '3.8'
 requests==2.32.3; python_version >= '3.8'
 requests-cache==1.2.1; python_version >= '3.8'
 rich==13.7.1; python_full_version >= '3.7.0'
-rpds-py==0.18.1; python_version >= '3.8'
+rpds-py==0.19.1; python_version >= '3.8'
 rsa==4.9; python_version >= '3.6' and python_version < '4'
 selenium==4.9.1; python_version >= '3.7'
-shillelagh[gsheetsapi]==1.2.19; python_version >= '3.8'
+shillelagh[gsheetsapi]==1.2.24; python_version >= '3.8'
 shortid==0.1.2
 simplejson==3.19.2; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2, 3.3'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-slack-sdk==3.30.0; python_version >= '3.6'
+slack-sdk==3.31.0; python_version >= '3.6'
 sniffio==1.3.1; python_version >= '3.7'
 sortedcontainers==2.4.0
-sqlalchemy==1.4.52; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+sqlalchemy==1.4.53; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 sqlalchemy-utils==0.38.3; python_version ~= '3.6'
 sqlglot==23.17.0; python_version >= '3.7'
 sqlparse==0.4.4; python_version >= '3.5'
 sshtunnel==0.4.0
 tabulate==0.8.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-trio==0.25.1; python_version >= '3.8'
+trio==0.26.0; python_version >= '3.8'
 trio-websocket==0.11.1; python_version >= '3.7'
 typing-extensions==4.12.2; python_version >= '3.8'
 tzdata==2024.1; python_version >= '2'
@@ -142,4 +144,4 @@ wtforms==3.1.2; python_version >= '3.8'
 wtforms-json==0.3.5
 xlsxwriter==3.0.9; python_version >= '3.6'
 zipp==3.19.2; python_version >= '3.8'
-zstandard==0.22.0; platform_python_implementation != 'PyPy'
+zstandard==0.23.0; platform_python_implementation != 'PyPy'
